--- a/MavenSQL/pom.xml
+++ b/MavenSQL/pom.xml
@@ -13,6 +13,7 @@
 	</dependencies>
 	<build>
 		<plugins>
+			<!-- compiler plugins -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
